# advent-of-code

./: .gitignore  README.md  day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py  day_16.py  day_17.py  day_18.py  day_19.py  day_20.py  day_21.py  day_22.py  day_23.py  day_24.py  day_25.py  pyproject.toml
.github/workflows/: lint.yaml  test.yaml
advent_of_code/: plant_regions.py  pushdown_maze.py  race_condition_maze.py  topographic_map.py  towels.py  wordsearch.py
advent_of_code_2024/: banana_market.py  claw_machine.py  data_loaders.py  file_system.py  grid_location.py  keypad.py  logic_gates.py  matrix.py  parser.py  plant_regions.py  print_queue.py  pushdown_maze.py  race_condition_maze.py  reindeer_maze.py  report.py  robots.py  topographic_map.py  wordsearch.py
solutions/2024/: __init__.py  day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py  day_16.py  day_17.py  day_18.py  day_19.py  day_20.py  day_21.py  day_22.py  day_23.py  day_24.py  day_25.py
solutions/2025/: __init__.py  day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py  day_11.py  day_12.py
src/advent_of_code/: antennae.py  aoc_solution.py  banana_market.py  battery_bank.py  calibration.py  christmas_tree_farm.py  claw_machine.py  disjoint_set.py  file_system.py  gift_shop.py  graph.py  grid_location.py  inclusive_range.py  indicator_lights.py  junction_boxes.py  keypad.py  kitchen_inventory.py  lab_maze.py  lan_party.py  location_lists.py  locks.py  logic_gates.py  maths_worksheet.py  matrix.py  movie_theatre.py  paper_forklift.py  parser.py  print_queue.py  reindeer_maze.py  report.py  robots.py  rotating_dial.py  stones.py  tachyon_manifold.py  three_bit_computer.py  toroidal_reactor.py  utility.py  warehouse.py
test/2024/: test_day_02.py  test_day_04.py  test_day_05.py  test_day_06.py  test_day_07.py  test_day_08.py  test_day_09.py  test_day_11.py  test_day_12.py  test_day_13.py  test_day_16.py  test_day_18.py  test_day_20.py  test_day_21.py  test_day_22.py  test_day_24.py
test/2025/: test_day_01.py  test_day_02.py  test_day_03.py  test_day_04.py  test_day_05.py  test_day_06.py  test_day_07.py  test_day_08.py  test_day_09.py  test_day_10.py  test_day_11.py  test_day_12.py
tests/: test_day_01.py  test_day_02.py  test_day_03.py  test_day_04.py  test_day_05.py  test_day_06.py  test_day_07.py  test_day_08.py  test_day_09.py  test_day_10.py  test_day_11.py  test_day_12.py  test_day_13.py  test_day_14.py  test_day_15.py  test_day_16.py  test_day_17.py  test_day_18.py  test_day_19.py  test_day_20.py  test_day_21.py  test_day_22.py  test_day_23.py  test_day_24.py  test_day_25.py
tests/2024/: test_day_01.py  test_day_03.py  (+7 more)
