[project]
name = "advent-of-code"
version = "0.2.0"
description = "Advent of Code solutions in Python."
authors = [
  { name = "James Robinson", email = "james.em.robinson@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
]
license = "GPL-3.0-or-later"
dependencies = [
  "numpy>=2.3.5",
  "pandas>=2.3.3",
  "ply>=3.11",
]

[project.urls]
Issues = "https://github.com/alan-turing-institute/advent-of-code/issues"
Source = "https://github.com/alan-turing-institute/advent-of-code"

[dependency-groups]
dev = [
  "coverage>=7.6.9",
  "mypy>=1.18.2",
  "pandas-stubs>=2.3.2.250926",
  "pydantic==2.10.2",
  "pytest>=8.3.4",
  "ruff>=0.14.6",
  "taskipy>=1.14.1",
]

[tool.coverage.paths]
source = ["advent_of_code/"]

[tool.coverage.run]
relative_files = true
omit= ["*/test/*"]

[tool.mypy]
disallow_subclassing_any = false  # allow subclassing of types from third-party libraries
files = "advent_of_code"     # run mypy over this directory
mypy_path = "typings"             # use this directory for stubs
plugins = ["pydantic.mypy"]       # enable the pydantic plugin
strict = true                     # enable all optional error checking flags

[[tool.mypy.overrides]]
module = ["ply.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = [
  "-vvv",
  "--import-mode=importlib",
  "--disable-warnings",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "C901",     # complex-structure
  "COM812",   # missing-trailing-comma
  "D100",     # undocumented-public-module
  "D101",     # undocumented-public-class
  "D102",     # undocumented-public-method
  "D103",     # undocumented-public-function
  "D107",     # undocumented-public-init
  "D203",     # conflicts with D211
  "D213",     # conflicts with D212
  "E501",     # line-too-long
  "PLR0912",  # too-many-branches
  "PLR0915",  # too-many-statements
  "T201",     # print-statement
]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["advent_of_code"]

[tool.ruff.lint.per-file-ignores]
# Ignore the following for tests only
"test/**/*" = [
  "INP001",   # implicit namespace
  "PLR2004",  # magic values
  "S101",     # assertions
  "TID252",   # relative imports
]
# Ignore module naming for solutions
"solutions/**/*" = [
  "N999", # module name
]

[tool.taskipy.tasks]
format = "ruff format && ruff check --fix && mypy src"
test2024 = "coverage run -m pytest ./test/2024/ && coverage report"
test2025 = "coverage run -m pytest ./test/2025/ && coverage report"
solve2024 = "for DAY in $(seq -w 1 25); do python ./solutions/2024/day_${DAY}.py; done"

[tool.uv]
package = true
